# tuxtalks-oxide

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TEAM_LEAD_GUIDELINES.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
benches/: fuzzy_matching.rs
docs/: RUST_MIGRATION_PLAN.md
proptest-regressions/intelligence/: intent.txt
src/: active_loop.rs  config.rs  lib.rs  main.rs
src/integration/: mod.rs  speech_service.rs
src/intelligence/: intent.rs
src/players/: elisa.rs  jriver.rs  manager.rs  mod.rs  mpris.rs  strawberry.rs
src/utils/: circuit_breaker.rs  db.rs  fuzzy.rs  fuzzy_tests.rs  library.rs  mod.rs  proptests.rs  speaker.rs  text_normalize.rs
src/utils/snapshots/: tuxtalks_oxide__utils__fuzzy_tests__tests__fuzzy_match_animals.snap  tuxtalks_oxide__utils__fuzzy_tests__tests__fuzzy_match_dark_side.snap  tuxtalks_oxide__utils__fuzzy_tests__tests__fuzzy_match_wall.snap
tests/: elisa_integration.rs  integration_dbus.rs  jriver_integration.rs  strawberry_integration.rs
