[package]
name = "tuxtalks-oxide"
version = "0.1.0"
edition = "2021"
authors = ["DeepMind Team", "StarTux"]
description = "Rust port of TuxTalks. Media-control CLI focused on JRiver, behavior mirrors the reference Python app."

[features]
# Default build is the media CLI only. The voice stack is feature-gated while it
# is reworked to mirror the Python pipeline (Vosk/Wyoming ASR + text_normalizer +
# command_processor + voice_fingerprint) rather than the current SpeechD-NG +
# LLM intent-JSON drift path. See src/active_loop.rs for details.
default = []
voice = []

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# DBus Integration
zbus = "4.4.0"

# Network & API
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
quick-xml = { version = "0.37", features = ["serialize"] }

# Database
rusqlite = { version = "0.33", features = ["bundled"] }

# Error Handling & logging
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }

# Fuzzy Matching & String Utils
strsim = "0.11"
regex = "1"
walkdir = "2"

# Metadata & IO
lofty = "0.21"

# Safety & Guardrails
governor = "0.7" # For rate limiting/circuit breakers

[dev-dependencies]
insta = "1"
proptest = "1"
criterion = "0.5"
wiremock = "0.6"
tempfile = "3"

[[bench]]
name = "fuzzy_matching"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
# Security enhancement: overflow checks in release
overflow-checks = true
